# SHOCKr

./: CMakeLists.txt  Makefile
src/: Boundary.cpp  Boundary.hpp  BoundaryWind.cpp  BoundaryWind.h  BoundaryWind.hpp  BoundaryWindLinearisedEuler.cpp  BoundaryWindLinearisedEuler.hpp  BoundaryWindPassiveScalar.cpp  BoundaryWindPassiveScalar.hpp  BoundaryZeroGradient.cpp  BoundaryZeroGradient.hpp  Equations.cpp  Equations.hpp  EquationsEuler.cpp  EquationsEuler.hpp  EquationsEulerCooling.cpp  EquationsEulerPassiveScalar.cpp  EquationsEulerPassiveScalar.hpp  EquationsLinearisedEuler.cpp  EquationsLinearisedEuler.hpp  Grid.cpp  Grid.h  Grid.hpp  Grid1D.cpp  Grid1D.hpp  GridRadial.cpp  GridRadial.hpp  InitialData.cpp  InitialData.hpp  InitialDataHomogeneous.cpp  InitialDataHomogeneous.hpp  InitialDataHomogeneousLinearisedEuler.cpp  InitialDataHomogeneousLinearisedEuler.hpp  InitialDataHomogeneousPassiveScalar.cpp  InitialDataHomogeneousPassiveScalar.hpp  InitialDataIsothermal.cpp  InitialDataIsothermal.hpp  InitialDataSodShock.cpp  InitialDataSodShock.hpp  Output.cpp  (+18 more)
